# OpenGL-3D-Renderer

./: .gitignore  CMakeLists.txt  premake5.lua
include/GL/: glad.h
include/self/: sgl.h
include/self/Camera/: Camera.cpp  Camera.h
include/self/Error/: Error.cpp  Error.h
include/self/GPU/: GPUInfo.cpp  GPUInfo.h
include/self/Logger/: Logger.cpp  Logger.h
include/self/Objects/: Angle.cpp  Angle.h  Bound.cpp  Bound.h  Color.cpp  Color.h  Curve.cpp  Curve.h  Objects.cpp  Objects.h  Renderable.cpp  Renderable.h  Sprite.cpp  Sprite.h  VertexArray.cpp  VertexArray.h  vec3.cpp  vec3.h
include/self/Objects/Matrices/: mat2.cpp  mat2.h  mat3.cpp  mat3.h
include/self/Objects/Transform/: Transform2d.cpp  Transform2d.h  Transform3d.cpp  Transform3d.h
include/self/Objects/Vectors/: vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
include/self/Shaders/: Shader.cpp  Shader.h  Texture.cpp  Texture.h  fragmentShader.glsl
include/self/Sounds/: Sound.cpp  Sound.h
include/self/Time/: Clock.cpp  Clock.h  Time.cpp  Time.h
include/self/Window/: Event.cpp  Event.h  Keyboard.cpp  Keyboard.h  Monitor.cpp  Monitor.h  Mouse.cpp  Mouse.h  Window.cpp  Window.h
lib/: OpenAL32.lib  alsoft.excommon.lib
src/: main.cpp
